--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check-lint": "eslint . --ext .js,.jsx .",
+    "fix-lint": "eslint --fix --ext .js,.jsx .",
+    "check-format": "prettier --check .",
+    "format": "prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.2.0",
@@ -21,6 +26,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.1",
+    "husky": "^8.0.1",
     "prettier": "^2.7.1"
   }
 }
