--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
@@ -27,6 +29,9 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.1",
     "husky": "^8.0.1",
-    "prettier": "^2.7.1"
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "react-redux": "^8.0.2",
+    "tailwindcss": "^3.1.4"
   }
 }
